tests/invalid/duplicate_variant_tydef_sum.eff
(* Duplicate variants are not allowed in a sum type *)
type cow = Horn of int | Horn of unit

